[package]
name = "timesince"
version = "0.1.0"
authors = ["Karun Ramakrishnan <root@thegrumpysage.com>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
console = "0.15.11"
comfy-table = "7.1.4"
chrono-humanize = "0.2.3"

[dev-dependencies]
tempfile = "3"